[gd_scene load_steps=28 format=3 uid="uid://cx2sg4vekkfp0"]

[ext_resource type="Texture2D" uid="uid://bjpjm4i8tukeu" path="res://spr/textbox.webp" id="1_2fl5m"]
[ext_resource type="Script" uid="uid://wm5kjdbnjhbh" path="res://scn/text_box_manager.gd" id="2_6w8h7"]
[ext_resource type="Texture2D" uid="uid://bfogdye1buiv8" path="res://spr/talking_sprites.webp" id="3_b07v4"]
[ext_resource type="FontFile" uid="uid://c0ogvtfqt7sbx" path="res://fnt/PublicPixel.otf" id="4_iugv5"]
[ext_resource type="AudioStream" uid="uid://c58owx36ntjkw" path="res://snd/text_voice_normal.wav" id="5_kngwh"]
[ext_resource type="AudioStream" uid="uid://bo7otdbkg25vx" path="res://snd/text_voice_player.wav" id="6_s4o4s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s4o4s"]
atlas = ExtResource("1_2fl5m")
region = Rect2(128, 48, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3p7v"]
atlas = ExtResource("1_2fl5m")
region = Rect2(0, 48, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l05rq"]
atlas = ExtResource("1_2fl5m")
region = Rect2(128, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mpyg"]
atlas = ExtResource("1_2fl5m")
region = Rect2(0, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_of6ap"]
atlas = ExtResource("1_2fl5m")
region = Rect2(128, 48, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0jli"]
atlas = ExtResource("1_2fl5m")
region = Rect2(0, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avjd"]
atlas = ExtResource("1_2fl5m")
region = Rect2(128, 0, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5xb5"]
atlas = ExtResource("1_2fl5m")
region = Rect2(0, 48, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc602"]
atlas = ExtResource("1_2fl5m")
region = Rect2(128, 48, 128, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_vf7as"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4o4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3p7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l05rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mpyg")
}],
"loop": false,
"name": &"closing",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_of6ap")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0jli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5xb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc602")
}],
"loop": false,
"name": &"opening",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kdckt"]
atlas = ExtResource("3_b07v4")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf7as"]
atlas = ExtResource("3_b07v4")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh25b"]
atlas = ExtResource("3_b07v4")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_po4xa"]
atlas = ExtResource("3_b07v4")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg4h8"]
atlas = ExtResource("3_b07v4")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yh5p"]
atlas = ExtResource("3_b07v4")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j1i3"]
atlas = ExtResource("3_b07v4")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54ilt"]
atlas = ExtResource("3_b07v4")
region = Rect2(48, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0fca"]
atlas = ExtResource("3_b07v4")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdiot"]
atlas = ExtResource("3_b07v4")
region = Rect2(24, 32, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cg4h8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdckt")
}],
"loop": true,
"name": &"flabbergasted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf7as")
}],
"loop": true,
"name": &"frazzled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh25b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po4xa")
}],
"loop": true,
"name": &"pensive",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg4h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yh5p")
}],
"loop": true,
"name": &"talking",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j1i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54ilt")
}],
"loop": true,
"name": &"talking_looking_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0fca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdiot")
}],
"loop": true,
"name": &"talking_looking_right",
"speed": 6.0
}]

[node name="TextBoxManager" type="AnimatedSprite2D"]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vf7as")
animation = &"idle"
script = ExtResource("2_6w8h7")

[node name="PlayerEmotions" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-48, 0)
sprite_frames = SubResource("SpriteFrames_cg4h8")
animation = &"none"

[node name="TextBoxContents" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_iugv5")
theme_override_font_sizes/normal_font_size = 8
scroll_active = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
visible_characters = 2

[node name="TextVoiceNormal" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_kngwh")

[node name="TextVoicePlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_s4o4s")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true
